# Luma

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  imgui.ini
assets/scenes/: pong_scene.yaml  test_scene.yaml
cmake/: CompilerWarnings.cmake  FetchDependencies.cmake  Sanitizers.cmake  patch_glslang.cmake
docs/: LUMA_ARCHITECTURE.md  TODO.md
examples/: CMakeLists.txt  gradient_visualizer.cpp  scene_viewer.cpp
include/luma/asset/: shader_compiler.hpp
include/luma/core/: jobs.hpp  logging.hpp  math.hpp  memory.hpp  time.hpp  types.hpp
include/luma/editor/: imgui_context.hpp
include/luma/input/: input.hpp  window.hpp
include/luma/render/: sdf.hpp
include/luma/scene/: archetype.hpp  component.hpp  entity.hpp  serialization.hpp  world.hpp
include/luma/vulkan/: command_buffer.hpp  descriptor.hpp  device.hpp  instance.hpp  memory.hpp  pipeline.hpp  swapchain.hpp  sync.hpp
shaders/: gradient.comp  gradient.slang  sdf_renderer.slang  test_gradient.comp
shaders/common/: sdf.slang
shaders_cache/: gradient.spv  sdf_renderer.spv
src/asset/: CMakeLists.txt  shader_compiler.cpp
src/core/: CMakeLists.txt  jobs.cpp  logging.cpp  memory.cpp  time.cpp
src/editor/: CMakeLists.txt  imgui_context.cpp
src/input/: CMakeLists.txt  input.cpp  window.cpp
src/render/: CMakeLists.txt
src/scene/: CMakeLists.txt  archetype.cpp  serialization.cpp  world.cpp
src/vulkan/: CMakeLists.txt  command_buffer.cpp  descriptor.cpp  device.cpp  instance.cpp  memory.cpp  pipeline.cpp  swapchain.cpp  sync.cpp
tests/: CMakeLists.txt  test_input.cpp
tests/asset/: test_shader_compiler.cpp
tests/core/: test_logging.cpp  test_math.cpp
tests/render/: CMakeLists.txt  test_sdf.cpp
tests/scene/: CMakeLists.txt  test_ecs.cpp  test_serialization.cpp
tests/vulkan/: test_gradient_compute.cpp
